# sg-spec

./: Groove_Layer_AI_Coach.md  LICENSE  MANIFEST.md  README.md  package-lock.json  package.json  pyproject.toml  sg-spec-design-review.md  sg_spec.code-workspace  smart_guitar_cavity_map.json  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agentic-ai/: README.md
agentic-ai/reference-impl/: analysis-to-intent.ts  golden-runner.ts  guidance-engine.ts  hotspot-detector.ts  hotspot-signals.ts  (+3 more)
contracts/: BUNDLE_FILE_CONTRACT.md  CHANGELOG.md  CLOUD_ENDPOINT_CONTRACT.md  DUAL_COACHING_ROADMAP.md  REPO_GUARDRAILS.md  __init__.py  cam_policy.schema.json  cam_policy.schema.sha256  coach_context_packet_v1.schema.json  coaching_ai_addendum_v1.schema.json  coaching_ai_addendum_v1.schema.sha256  coaching_deterministic_v1.schema.json  coaching_deterministic_v1.schema.sha256  coaching_draft_v1.schema.sha256  coaching_envelope_v1.schema.json  coaching_envelope_v1.schema.sha256  ota_bundle_manifest_v1.schema.json  ota_multi_pack_bundle_v1.schema.json  ota_multi_pack_bundle_v1.schema.sha256  qa_core.schema.sha256  smart_guitar_toolbox_telemetry_v1.schema.json  smart_guitar_toolbox_telemetry_v1.schema.sha256  toolbox_smart_guitar_safe_export_v1.schema.json  toolbox_smart_guitar_safe_export_v1.schema.sha256  viewer_pack_v1.schema.json  viewer_pack_v1.schema.sha256
docs/: DANCE_PACK_SCHEMA_HANDOFF.md  GOVERNANCE_EXECUTIVE_SUMMARY.md  REPOSITORY_DECISION_MATRIX.md  SAFE_EXPORT_SYSTEM_AUDIT.md  SMART_GUITAR_SPEC.md
hardware/: profile.json
(+197 files in other folders)
